--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "react": "15.4.1",
-    "react-native": "0.38.0"
+    "react-native": "0.38.0",
+    "reselect": "2.5.4"
   },
   "devDependencies": {
     "babel-eslint": "7.1.1",
@@ -35,9 +36,9 @@
   },
   "eslintConfig": {
     "extends": "commercetools/with-react",
-		"rules": {
-			"react/wrap-multilines": 0,
-			"react/jsx-wrap-multilines": 2
-		}
+    "rules": {
+      "react/wrap-multilines": 0,
+      "react/jsx-wrap-multilines": 2
+    }
   }
 }
