--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "react": "15.4.1",
     "react-native": "0.38.0",
+    "react-native-vector-icons": "3.0.0",
     "reselect": "2.5.4"
   },
   "devDependencies": {
