--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,4 +1,4 @@
-rootProject.name = 'MerchantCenterIOSDashboard'
+rootProject.name = 'CTPDashboard'
 
 include ':app'
 include ':react-native-vector-icons'
