--- a/ios/CTPDashboard.xcodeproj/xcshareddata/xcschemes/CTPDashboard.xcscheme
+++ b/ios/CTPDashboard.xcodeproj/xcshareddata/xcschemes/CTPDashboard.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "MerchantCenterIOSDashboard.app"
-               BlueprintName = "MerchantCenterIOSDashboard"
-               ReferencedContainer = "container:MerchantCenterIOSDashboard.xcodeproj">
+               BuildableName = "CTPDashboard.app"
+               BlueprintName = "CTPDashboard"
+               ReferencedContainer = "container:CTPDashboard.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
          <BuildActionEntry
@@ -29,9 +29,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "MerchantCenterIOSDashboardTests.xctest"
-               BlueprintName = "MerchantCenterIOSDashboardTests"
-               ReferencedContainer = "container:MerchantCenterIOSDashboard.xcodeproj">
+               BuildableName = "CTPDashboardTests.xctest"
+               BlueprintName = "CTPDashboardTests"
+               ReferencedContainer = "container:CTPDashboard.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -47,9 +47,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "MerchantCenterIOSDashboardTests.xctest"
-               BlueprintName = "MerchantCenterIOSDashboardTests"
-               ReferencedContainer = "container:MerchantCenterIOSDashboard.xcodeproj">
+               BuildableName = "CTPDashboardTests.xctest"
+               BlueprintName = "CTPDashboardTests"
+               ReferencedContainer = "container:CTPDashboard.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -57,9 +57,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "MerchantCenterIOSDashboard.app"
-            BlueprintName = "MerchantCenterIOSDashboard"
-            ReferencedContainer = "container:MerchantCenterIOSDashboard.xcodeproj">
+            BuildableName = "CTPDashboard.app"
+            BlueprintName = "CTPDashboard"
+            ReferencedContainer = "container:CTPDashboard.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
    </TestAction>
@@ -77,9 +77,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "MerchantCenterIOSDashboard.app"
-            BlueprintName = "MerchantCenterIOSDashboard"
-            ReferencedContainer = "container:MerchantCenterIOSDashboard.xcodeproj">
+            BuildableName = "CTPDashboard.app"
+            BlueprintName = "CTPDashboard"
+            ReferencedContainer = "container:CTPDashboard.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <AdditionalOptions>
@@ -96,9 +96,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "MerchantCenterIOSDashboard.app"
-            BlueprintName = "MerchantCenterIOSDashboard"
-            ReferencedContainer = "container:MerchantCenterIOSDashboard.xcodeproj">
+            BuildableName = "CTPDashboard.app"
+            BlueprintName = "CTPDashboard"
+            ReferencedContainer = "container:CTPDashboard.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
