--- a/ios/CTPDashboard.xcodeproj/xcshareddata/xcschemes/CTPDashboard.xcscheme
+++ b/ios/CTPDashboard.xcodeproj/xcshareddata/xcschemes/CTPDashboard.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0620"
+   LastUpgradeVersion = "0810"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -17,7 +17,7 @@
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
                BuildableName = "CTPDashboard.app"
                BlueprintName = "CTPDashboard"
-               ReferencedContainer = "container:CTPDashboard.xcodeproj">
+               ReferencedContainer = "container:CTP Dashboard.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
          <BuildActionEntry
@@ -31,16 +31,16 @@
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
                BuildableName = "CTPDashboardTests.xctest"
                BlueprintName = "CTPDashboardTests"
-               ReferencedContainer = "container:CTPDashboard.xcodeproj">
+               ReferencedContainer = "container:CTP Dashboard.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
+      buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES"
-      buildConfiguration = "Debug">
+      shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
          <TestableReference
             skipped = "NO">
@@ -49,7 +49,7 @@
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
                BuildableName = "CTPDashboardTests.xctest"
                BlueprintName = "CTPDashboardTests"
-               ReferencedContainer = "container:CTPDashboard.xcodeproj">
+               ReferencedContainer = "container:CTP Dashboard.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -62,15 +62,18 @@
             ReferencedContainer = "container:CTPDashboard.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
+      <AdditionalOptions>
+      </AdditionalOptions>
    </TestAction>
    <LaunchAction
+      buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
-      buildConfiguration = "Debug"
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
+      debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
       <BuildableProductRunnable
          runnableDebuggingMode = "0">
@@ -86,10 +89,10 @@
       </AdditionalOptions>
    </LaunchAction>
    <ProfileAction
+      buildConfiguration = "Release"
       shouldUseLaunchSchemeArgsEnv = "YES"
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
-      buildConfiguration = "Release"
       debugDocumentVersioning = "YES">
       <BuildableProductRunnable
          runnableDebuggingMode = "0">
@@ -98,7 +101,7 @@
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
             BuildableName = "CTPDashboard.app"
             BlueprintName = "CTPDashboard"
-            ReferencedContainer = "container:CTPDashboard.xcodeproj">
+            ReferencedContainer = "container:CTP Dashboard.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
