--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "blueimp-md5": "2.6.0",
     "react": "15.4.1",
     "react-native": "0.38.0",
+    "react-native-tab-navigator": "0.3.3",
     "react-native-vector-icons": "3.0.0",
     "reselect": "2.5.4"
   },
