--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
     "test": "jest"
   },
   "dependencies": {
+    "apollo-client": "^1.0.4",
     "blueimp-md5": "2.7.0",
-    "react": "16.0.0-alpha.6",
+    "graphql-tag": "^2.0.0",
+    "moment": "^2.18.1",
     "prop-types": "15.5.8",
+    "react": "16.0.0-alpha.6",
     "react-intl": "2.2.3",
+    "react-apollo": "^1.1.1",
     "react-native": "0.43.4",
     "react-native-tab-navigator": "0.3.3",
     "react-native-vector-icons": "4.0.1",
