--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
+    "format": "prettier --write --trailing-comma es5 --single-quote 'js/**/*.js'",
     "lint": "eslint js",
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "test": "jest"
@@ -28,12 +29,16 @@
     "eslint": "3.19.0",
     "eslint-config-airbnb": "15.0.1",
     "eslint-config-commercetools": "6.0.0",
+    "eslint-config-prettier": "2.1.1",
     "eslint-plugin-import": "2.3.0",
+    "eslint-plugin-jest": "~20.0.0",
     "eslint-plugin-jsx-a11y": "5.0.3",
+    "eslint-plugin-prettier": "2.0.1",
     "eslint-plugin-react": "7.0.1",
     "flow-bin": "0.47.0",
     "jest": "20.0.4",
     "jest-react-native": "18.0.0",
+    "prettier": "1.3.1",
     "react-test-renderer": "15.5.4"
   },
   "jest": {
@@ -44,8 +49,20 @@
     ]
   },
   "eslintConfig": {
-    "extends": "commercetools/with-react",
+    "extends": [
+      "commercetools/with-react",
+      "plugin:jest/recommended",
+      "prettier",
+      "prettier/react"
+    ],
+    "plugins": [
+      "jest",
+      "prettier"
+    ],
     "rules": {
+      "import/no-named-as-default": 0,
+      "jest/no-identical-title": "warn",
+      "jest/no-focused-tests": 2,
       "react/wrap-multilines": 0,
       "react/jsx-wrap-multilines": 2
     }
