--- a/package.json
+++ b/package.json
@@ -11,11 +11,10 @@
   "dependencies": {
     "apollo-client": "^1.3.0",
     "blueimp-md5": "2.7.0",
-    "graphql-tag": "^2.2.1",
     "moment": "^2.18.1",
     "prop-types": "15.5.10",
     "react": "16.0.0-alpha.6",
-    "react-apollo": "^1.2.0",
+    "react-apollo": "1.4.2",
     "react-intl": "2.3.0",
     "react-native": "0.44.2",
     "react-native-elements": "0.12.2",
