--- a/ios/CTPDashboard/Info.plist
+++ b/ios/CTPDashboard/Info.plist
@@ -64,5 +64,6 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>ITSAppUsesNonExemptEncryption</key><false/>
 </dict>
 </plist>
