--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
+    "commitmsg": "validate-commit-msg",
     "format": "prettier --write --trailing-comma es5 --single-quote 'js/**/*.js'",
     "lint": "eslint js",
     "start": "node node_modules/react-native/local-cli/cli.js start",
@@ -36,10 +37,12 @@
     "eslint-plugin-prettier": "2.0.1",
     "eslint-plugin-react": "7.0.1",
     "flow-bin": "0.47.0",
+    "husky": "0.13.4",
     "jest": "20.0.4",
     "jest-react-native": "18.0.0",
     "prettier": "1.3.1",
-    "react-test-renderer": "15.5.4"
+    "react-test-renderer": "15.5.4",
+    "validate-commit-msg": "2.10.1"
   },
   "jest": {
     "preset": "react-native",
@@ -65,6 +68,11 @@
       "jest/no-focused-tests": 2,
       "react/wrap-multilines": 0,
       "react/jsx-wrap-multilines": 2
+    }
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
     }
   }
 }
