--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "blueimp-md5": "2.7.0",
     "moment": "^2.18.1",
     "prop-types": "15.5.10",
-    "react": "16.0.0-alpha.6",
+    "react": "16.0.0-alpha.12",
     "react-apollo": "1.4.2",
     "react-intl": "2.3.0",
     "react-native": "0.45.0",
@@ -41,7 +41,7 @@
     "jest": "20.0.4",
     "jest-react-native": "18.0.0",
     "prettier": "1.4.4",
-    "react-test-renderer": "15.5.4",
+    "react-test-renderer": "16.0.0-alpha.12",
     "validate-commit-msg": "2.10.1"
   },
   "jest": {
